--- a/MathsNotesBase.tex
+++ b/MathsNotesBase.tex
@@ -40,6 +40,7 @@
 \newcommand\sidecomment[1]{ \text{\scriptsize{#1}} }
 \newcommand{\divides}{\mid}
 \newcommand{\notdivides}{\nmid}
+\newcommand{\eqand}{\hspace{10pt}\text{and}\hspace{10pt}}
 
 
 \newcommand{\wrong}{\begingroup\color{red}\text{Wrong!}\endgroup}
