--- a/Number Theory.tex
+++ b/Number Theory.tex
@@ -7,33 +7,34 @@
 
 	\searchableSubsection{\sectionTitle{Natural Numbers}}{number theory}{\bigskip}
 			
-			\searchableSubsection{Peano Axioms}{number theory}{\bigskip
-				\begin{axiom}{Closure under addition:}\\ For all $a,b \in \N{}$ we have $a + b \in \N{}$.	
-				\end{axiom}
-				\begin{axiom}{Closure under multiplication:}\\ For all $a,b \in \N{}$ we have $a \times b \in \N{}$.
-				\end{axiom}
-				\begin{axiom}{Commutative Law for addition:}\\ For all $a,b \in \N{}$ we have $a + b = b + a$.
-				\end{axiom}
-				\begin{axiom}{Associative Law for addition:}\\ For all $a,b,c \in \N{}$ we have $(a + b) + c = a + (b + c)$.
-				\end{axiom}
-				\begin{axiom}{Commutative Law for multiplication:}\\ For all $a,b \in \N{}$ we have $a \times b = b \times a$.
-				\end{axiom}
-				\begin{axiom}{Associative Law for multiplication:}\\ For all $a,b,c \in \N{}$ we have $(a \times b) \times c = a \times (b \times c)$.
-				\end{axiom}
-				\begin{axiom}{Multiplicative Identity:}\\ There is a special element of $\N{}$, denoted by 1, which has the property that for all $n \in \N{},\; n \times 1 = n$.
-				\end{axiom}
-				\begin{axiom}{Additive cancellation:}\\ For all $a,b,c \in \N{}$ if $a + c = b + c \text{ then } a = b$.
-				\end{axiom}
-				\begin{axiom}{Multiplicative cancellation:}\\ For all $a,b,c \in \N{}$ if $a \times c = b \times c \text{ then } a = b$.
-				\end{axiom}
-				\begin{axiom}{Distributive Law:}\\ For all $a,b,c \in \N{},\; a \times (b + c) = (a \times b) + (b \times c)$.
-				\end{axiom}
-				\begin{axiom}{Definition of "less than":}\\ For all $a,b \in \N{},\; a < b$ if and only if there is some $c \in \N{} \suchthat a + c = b$.
-				\end{axiom}
-				\begin{axiom}{Trichotomous property:}\\ For all $a,b \in \N{}$ exactly one of the following is true: $a = b,\; a < b,\; b < a$.
-				\end{axiom}
-			}
+		\searchableSubsection{Peano Axioms}{number theory}{\bigskip
+			\begin{axiom}{Closure under addition:}\\ For all $a,b \in \N{}$ we have $a + b \in \N{}$.	
+			\end{axiom}
+			\begin{axiom}{Closure under multiplication:}\\ For all $a,b \in \N{}$ we have $a \times b \in \N{}$.
+			\end{axiom}
+			\begin{axiom}{Commutative Law for addition:}\\ For all $a,b \in \N{}$ we have $a + b = b + a$.
+			\end{axiom}
+			\begin{axiom}{Associative Law for addition:}\\ For all $a,b,c \in \N{}$ we have $(a + b) + c = a + (b + c)$.
+			\end{axiom}
+			\begin{axiom}{Commutative Law for multiplication:}\\ For all $a,b \in \N{}$ we have $a \times b = b \times a$.
+			\end{axiom}
+			\begin{axiom}{Associative Law for multiplication:}\\ For all $a,b,c \in \N{}$ we have $(a \times b) \times c = a \times (b \times c)$.
+			\end{axiom}
+			\begin{axiom}{Multiplicative Identity:}\\ There is a special element of $\N{}$, denoted by 1, which has the property that for all $n \in \N{},\; n \times 1 = n$.
+			\end{axiom}
+			\begin{axiom}{Additive cancellation:}\\ For all $a,b,c \in \N{}$ if $a + c = b + c \text{ then } a = b$.
+			\end{axiom}
+			\begin{axiom}{Multiplicative cancellation:}\\ For all $a,b,c \in \N{}$ if $a \times c = b \times c \text{ then } a = b$.
+			\end{axiom}
+			\begin{axiom}{Distributive Law:}\\ For all $a,b,c \in \N{},\; a \times (b + c) = (a \times b) + (b \times c)$.
+			\end{axiom}
+			\begin{axiom}{Definition of "less than":}\\ For all $a,b \in \N{},\; a < b$ if and only if there is some $c \in \N{} \suchthat a + c = b$.
+			\end{axiom}
+			\begin{axiom}{Trichotomous property:}\\ For all $a,b \in \N{}$ exactly one of the following is true: $a = b,\; a < b,\; b < a$.
+			\end{axiom}
+		}
 		
+		% TODO: this should be inside a searchable subsection
 		\paragraph{Notation:} We also write $ab$ for $a \times b$.
 		
 		\searchableSubsection{Properties following from these axioms}{number theory}{\bigskip
