--- a/MathsNotesBase.tex
+++ b/MathsNotesBase.tex
@@ -81,6 +81,7 @@
 \newtheorem*{definition}{Definition}
 \newtheorem{axiom}{Axiom}
 \newtheorem*{corollary}{Corollary}
+\newtheorem*{lemma}{Lemma}
 
 \newcommand{\labeledProposition}[2]{
 	\begin{proposition}
