--- a/code examples.tex
+++ b/code examples.tex
@@ -6,6 +6,10 @@
 \begin{document}
 	\chapter*{Code Examples}
 	
+	\subsection{Inline maths}
+	${}$ % atomic maths
+	${\bm{}}$ % atomic bold maths
+	
 	\subsection{Maths bold font}
 	$\bm{x} = 2$
 	
@@ -20,6 +24,11 @@
 %		&&  &=  \\
 %		&\iff &  &=  &\sidecomment{} \\
 %	\end{align*}
+
+	\subsection{Propositions and Theorems}
+	\labeledProposition{}{}
+	\begin{proof}
+	\end{proof}
 	
 	\subsection{Inline image}
 	\begin{figure}[h!]
