--- a/code examples.tex
+++ b/code examples.tex
@@ -98,5 +98,8 @@
 		\ex {the determinant function $ det : GL_n(\R{}) \longmapsto \R{\times} $}\label{ex_determinant}
 		\ex {an arguably trivial example is called the \textit{inclusion} map $i : H \longmapsto G$ of a subgroup $H$ into a group $G$, defined by $i(x) = x$. It functions as the identity for elements in the subgroup $H$ but, since it is not surjective, there is no inverse mapping.}\label{ex_inclusion_map}
 	\end{exe}
+
+	\subsection{Code listings}
+	\lstinputlisting[language=Python]{./resources/code/python/converge_to_minus_2.py}
 	
 \end{document}
